Major changes on architecture and related work

--- a/refs.bib
+++ b/refs.bib
@@ -282,7 +282,7 @@
 @incollection{moody1998metrics,
   title={Metrics for evaluating the quality of entity relationship models},
   author={Moody, Daniel L},
-  booktitle={Conceptual Modeling--ER’98},
+  booktitle={Conceptual Modeling--ER'98},
   pages={211--225},
   year={1998},
   publisher={Springer}
@@ -326,7 +326,7 @@
 
 @article{forresterWavePPM,
   title={The Forrester Wave: Project/Program Portfolio Management, Q4 2012},
-  author={Visitacion, margo and Murphy, Phil},
+  author={Visitacion, Margo and Murphy, Phil},
   journal={Forrester Research},
   year={2012}
 }
