--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -14,7 +14,7 @@ The next Figure presents the Gantt Chart for this project. In Table 6 we have a 
 
 \begin{figure}[h!]
 \centering
-\includegraphics[height=0.55\textheight]{img/GanttChart.png}
+\includegraphics[height=0.55\textheight]{img/GanttChart2.png}
 \caption{Gantt Chart for the project.}
 \end{figure}
 
@@ -60,7 +60,7 @@ The next Figure presents the Gantt Chart for this project. In Table 6 we have a 
 5.2 & \begin{tabular}[c]{@{}l@{}}Evaluation using Moody and Shanks Framework; \\ Results analysis and reporting;\end{tabular} \\ \hline
 \rowcolor[HTML]{68CBD0} 
 6 & \textbf{Dissertation} \\ \hline
-25 & \begin{tabular}[c]{@{}l@{}}Write dissertation;\\ Dissertation presentation;\end{tabular} \\ \hline
+6.1 & \begin{tabular}[c]{@{}l@{}}Write dissertation;\\ Dissertation presentation;\end{tabular} \\ \hline
 \end{tabular}
 }
 \vspace{2mm}
