last revision before submission maybe lol

--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -6,7 +6,7 @@
 \label{sec:attachments}
 
 
-\subsection{Appendix A - Work Scheduling Plan} 
+\subsection{Work Scheduling Plan} 
 
 The next Figure presents the Gantt Chart for this project. In Table 6 we have a description of objectives for each task.
 
@@ -41,7 +41,7 @@ The next Figure presents the Gantt Chart for this project. In Table 6 we have a 
 2.4 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Necessary changes definition; \\ Evaluation Report;\end{tabular} \\ \hline
 2.5 & \begin{tabular}[c]{@{}l@{}}Iteration on Processes modelling, Artifact definition and \\ responsibility structure definition tasks;\end{tabular} \\ \hline
 2.6 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Necessary changes definition; \\ Evaluation Report;\end{tabular} \\ \hline
-2.7 & \begin{tabular}[c]{@{}l@{}}Iteration on Processes modelling, Artifact definition and responsibilitystructure definition tasks; \\ Final proposal for the Process architecture;\end{tabular} \\ \hline
+2.7 & \begin{tabular}[c]{@{}l@{}}Iteration on Processes modelling, Artifact definition and responsibility structure definition tasks; \\ Final proposal for the Process architecture;\end{tabular} \\ \hline
 \rowcolor[HTML]{68CBD0} 
 \textbf{3} & \textbf{Logical Application Architecture} \\ \hline
 3.1 & \begin{tabular}[c]{@{}l@{}}Definition of PPM solution's features to include into the architecture; \\ Definition of input activities from process architecture to PPM solution; \\ Definition of outputs from PPM Solution;\end{tabular} \\ \hline
@@ -70,7 +70,7 @@ The next Figure presents the Gantt Chart for this project. In Table 6 we have a 
 
 \newpage
 
-\subsection{Appendix B - COBIT 5 Processes by domain} 
+\subsection{COBIT 5 Processes by domain} 
 
 The next Figure presents the management and governance processes from COBIT 5 process framework, presented by domain.
 
@@ -82,7 +82,7 @@ The next Figure presents the management and governance processes from COBIT 5 pr
 
 \newpage
 
-\subsection{Appendix C - ISO 19011 Audit Programme Management process} 
+\subsection{ISO 19011 Audit Programme Management process} 
 
 The next figure presents the process flow purposed by ISO 19011 International standard for Audit programmes management.
 
