--- a/sections/architecture.tex
+++ b/sections/architecture.tex
@@ -14,9 +14,9 @@ As long as this project is aligned with a real-case scenario for an organization
 \subsection{Real-case Scenario}
 
 The real-case organization scenario will provide constraints and assumptions for this project, made available by the organization's stakeholders. Being so, some design decisions were made considering specific requirements from this scenario.\par
-We are dealing with an organization from the utilities sector of Business (Energy), composed by a unique administration for Applications (software) area. This administration will receive two types of requests: project execution and evolving maintenance requests.\par
+We are dealing with an organization from the utilities sector of Business (Energy), composed by a unique administration for Applications (software) area. This administration will receive two types of requests: project execution and evolutive maintenance requests.\par
 Considering the stakeholders for this project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization administration (Sponsor of this project), the financial and logistic departments, and the Technology area, composed by the Information Systems department (Project execution and Maintenance departments). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
-Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolving maintenance requests are filtered by a Help-Desk service, Wherefore only the major changes requests arrive to the evolving maintenance department.\par
+Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolutive maintenance requests are filtered by a Help-Desk service, wherefore only the major changes requests arrive to the evolutive maintenance department.\par
 A project only enters in production phase after approval from the maintenance department. When in production phase, project belongs to the maintenance department. It can, accordingly with a strategical plan previously defined, outsource the maintenance's implementation, being only responsible for its management.\par
 This real-case scenario will allow us to extract some requirements and also take design decisions accordingly to organization's stakeholders' needs and concerns, deciding which processes must be included in the processes architecture and the ones we should not focus, to reduce unnecessary complexity.\par
 
@@ -45,11 +45,11 @@ Regarding Project processes, and accordingly to the concerns extracted from the 
 \caption{Processes areas considered for this project. Adapted from \cite{ISO12207}.}
 \end{figure}
 
-Apart from processes presented by ISO/IEC 12207, the stakeholders presented specific concerns regarding processes on Capacity Management, Issues Management, Financial Management and Document Management. They need to be taking in account on this project's scope considering stakeholders' needs.\par
-Capacity Management, as stated in \cite{itilSD}, ``ensure that cost-justifiable IT capacity in all areas of IT always exists and is matched to the current and future agreed needs of the business, in a timely manner.''. Deals with performance achievement and capacity availability, considering resources and services itself. It tries to balance costs against resources needed and supply against demand.\par
+Apart from processes presented by ISO/IEC 12207, the stakeholders presented specific concerns regarding processes on Capacity Management, Issues Management, Financial Management and Document Management.\par
+Capacity Management, as stated in \cite{itilSD}, \textit{``ensure that cost-justifiable IT capacity in all areas of IT always exists and is matched to the current and future agreed needs of the business, in a timely manner.''}. Deals with performance achievement and capacity availability, considering resources and services itself. It tries to balance costs against resources needed and supply against demand.\par
 The main areas are Business Capacity Management (requirements for service and IT infrastructure), Service Capacity Management (performance and capacity management of IT services operation) and Component Capacity Management (performance, capacity and utilization management of individual IT technology components).\par
 Issues Management is the process of identifying and resolving issues, as staff, suppliers, technical or material problems. Many times confused with risks, they can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
-Financial Management, as stated in \cite{itilSS}, ``provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''. Core areas for IT Financial Management are Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our architecture, in order to remove unnecessary complexity.\par
+Financial Management, as stated in \cite{itilSS}, \textit{``provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''}. Core areas for IT Financial Management are Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our architecture, in order to remove unnecessary complexity.\par
 Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. This processes are also related to the supporting artifacts we want to develop.\par
 In Table 2 we present the processes we will consider for this project and a description of some activities each process implements.
 
@@ -111,7 +111,7 @@ Our objective is to use only the important knowledge from sections 4 and 5 for t
 \subsubsection{Processes Supporting artifacts}
 
 Considering the processes architecture we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will identify all artifacts needed, clearly defining its purpose, content and participants.\par
-This artifacts will be defined during the designing of the process architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
+This artifacts will be defined during the designing of the processes architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
 
 \subsubsection{Responsibility Structure}
 
