--- a/sections/keywords.tex
+++ b/sections/keywords.tex
@@ -6,6 +6,6 @@
 
 \begin{keywords}
 
-Project Management, Maintenance, Software lifecycle Processes, COBIT, ITIL, PMBOK
+Management processes, Governance processes, Project Execution, Maintenance, COBIT, ITIL, PMBOK
 
 \end{keywords}
